--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
   pin_code_fields: ^8.0.1
+  http: ^1.2.2
+  shared_preferences: ^2.3.1
 
 dev_dependencies:
   flutter_test:
